[gd_scene load_steps=12 format=2]

[ext_resource path="res://Minigames/StealthPlatformer/Cougar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Cougar/CougarSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Minigames/StealthPlatformer/Sensors.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 71.0282

[sub_resource type="Animation" id=3]
resource_name = "Jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ), Vector2( 6, 5 ), Vector2( 7, 5 ), Vector2( 8, 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Sleep"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ), Vector2( 5, 4 ), Vector2( 6, 4 ), Vector2( 7, 4 ), Vector2( 8, 4 ), Vector2( 9, 4 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "lick"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ), Vector2( 5, 2 ), Vector2( 6, 2 ), Vector2( 7, 2 ), Vector2( 8, 2 ), Vector2( 9, 2 ), Vector2( 10, 2 ), Vector2( 11, 2 ), Vector2( 12, 2 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "pounce"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ) ]
}

[node name="Cougar" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
max_patrol_speed = 60.0
patrol_acceleration = 800.0
patrol_points_path = NodePath("PatrolPoints")
point_distance_tolerance = 2.0
max_chase_speed = 140.0
chase_acceleration = 1000.0
idle_deacceleration = 600.0
jump_height = 40.0
jump_duration = 0.2
fall_duration = 0.2
max_fall_speed = 500.0
initial_state = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, 0 )
texture = ExtResource( 2 )
offset = Vector2( 4.5, -10 )
flip_h = true
hframes = 13
vframes = 6
frame = 66
region_rect = Rect2( 114.3, 96.6375, 71.1784, 5.47526 )

[node name="VisionCone" type="Area2D" parent="."]
position = Vector2( -8, -6 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="VisionCone"]
position = Vector2( 8, 5.5 )
polygon = PoolVector2Array( -8, -5, -100, 25, -100, -35 )

[node name="Polygon2D" type="Polygon2D" parent="VisionCone"]
position = Vector2( 8, 5.5 )
color = Color( 1, 1, 1, 0.180392 )
polygon = PoolVector2Array( -8, -5, -100, 25, -100, -35 )

[node name="SleepingDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SleepingDetection"]
shape = SubResource( 2 )

[node name="PatrolPoints" type="Node" parent="."]

[node name="Sensors" type="Node2D" parent="."]
position = Vector2( 0, 6 )
script = ExtResource( 4 )

[node name="LowerRay" type="RayCast2D" parent="Sensors"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( -15, 0 )

[node name="UpperRay" type="RayCast2D" parent="Sensors"]
enabled = true
cast_to = Vector2( -15, 0 )

[node name="EdgeDetectionRay" type="RayCast2D" parent="Sensors"]
position = Vector2( -11, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="PathCalculationTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 3 )
anims/Run = SubResource( 4 )
anims/Sleep = SubResource( 5 )
anims/lick = SubResource( 6 )
anims/pounce = SubResource( 7 )
anims/walk = SubResource( 8 )

[connection signal="body_entered" from="VisionCone" to="." method="_on_VisionCone_body_entered"]
[connection signal="body_entered" from="SleepingDetection" to="." method="_on_SleepingDetection_body_entered"]
[connection signal="timeout" from="PathCalculationTimer" to="." method="_on_PathCalculationTimer_timeout"]
